force-app/main/default/objects/Program_Dates__c/Program_Dates__c.object-meta.xml
<CustomObject>
    <label>Program Dates</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>