force-app/main/default/objects/Program_Dates__c/fields/Already_Migrated__c.field-meta.xml
<CustomField>
    <fullName>Already_Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Already Migrated</label>
    <type>Checkbox</type>
</CustomField>