force-app/main/default/objects/Program_Dates__c/fields/External_Program_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Program_ID__c</fullName>
    <description>ID from External Program from PV Org</description>
    <externalId>true</externalId>
    <label>External Program ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>