force-app/main/default/objects/Program_Dates__c/fields/Inception_Date__c.field-meta.xml
<CustomField>
    <fullName>Inception_Date__c</fullName>
    <description>lowest date within partner category</description>
    <label>Inception Date</label>
    <type>Date</type>
</CustomField>