force-app/main/default/objects/Program_Dates__c/fields/Partner_Category__c.field-meta.xml
<CustomField>
    <fullName>Partner_Category__c</fullName>
    <description>Roll-up value of program name</description>
    <label>Partner Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>