force-app/main/default/objects/Program_Dates__c/fields/Program_Active_Flag__c.field-meta.xml
<CustomField>
    <fullName>Program_Active_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Active Flag</label>
    <type>Checkbox</type>
</CustomField>