force-app/main/default/objects/Program_Dates__c/fields/Program_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Date__c</fullName>
    <description>Activation date</description>
    <label>Program Date</label>
    <type>Date</type>
</CustomField>