force-app/main/default/objects/Program_Dates__c/fields/Program_Deactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Deactivated_Date__c</fullName>
    <label>Program Deactivated Date</label>
    <type>Date</type>
</CustomField>