force-app/main/default/objects/Program_Dates__c/fields/Program_Deactivated_Flag__c.field-meta.xml
<CustomField>
    <fullName>Program_Deactivated_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Deactivated Flag</label>
    <type>Checkbox</type>
</CustomField>