force-app/main/default/objects/Program_Dates__c/fields/Program_Deactivated_Reason__c.field-meta.xml
<CustomField>
    <fullName>Program_Deactivated_Reason__c</fullName>
    <label>Program Deactivated Reason</label>
    <type>TextArea</type>
</CustomField>