force-app/main/default/objects/Program_Dates__c/fields/Program_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_ID__c</fullName>
    <description>Corp and Sales IDs</description>
    <label>Program ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>