force-app/main/default/objects/Program_Dates__c/fields/Program_Reactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Reactivated_Date__c</fullName>
    <label>Program Reactivated Date</label>
    <type>Date</type>
</CustomField>